--- a/pom.xml
+++ b/pom.xml
@@ -127,6 +127,24 @@
             <version>28.1-jre</version>
         </dependency>
 
+        <!--Logs-->
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>2.19.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.19.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-slf4j-impl</artifactId>
+            <version>2.19.0</version>
+        </dependency>
+
+
         <!--Test-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
