--- a/pom.xml
+++ b/pom.xml
@@ -124,11 +124,11 @@
 
         <!--Packaging to jar-->
 
-        <!--<dependency>
+        <dependency>
             <groupId>com.github.eirslett</groupId>
             <artifactId>frontend-maven-plugin</artifactId>
             <version>1.6</version>
-        </dependency>-->
+        </dependency>
 
     </dependencies>
 
@@ -148,7 +148,7 @@
                 </configuration>
             </plugin>
 
-            <!--<plugin>
+            <plugin>
                 <groupId>com.github.eirslett</groupId>
                 <artifactId>frontend-maven-plugin</artifactId>
                 <version>1.6</version>
@@ -177,7 +177,7 @@
                         </configuration>
                     </execution>
                     <execution>
-                        <id>npm run build</id>
+                        <id>CI=false npm run build</id>
                         <goals>
                             <goal>npm</goal>
                         </goals>
@@ -204,7 +204,7 @@
                         </goals>
                     </execution>
                 </executions>
-            </plugin>-->
+            </plugin>
         </plugins>
     </build>
 
