--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.config.import=secrets.properties
+server.port=${SERVER_PORT}
 #logging.level.org.springframework=DEBUG
 #spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.format_sql=true
