--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,8 @@
 #logging.level.org.springframework=DEBUG
 #spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.format_sql=true
-
+#spring.profiles.active=dev
 spring.jpa.generate-ddl=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto = update
-
