--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -2,6 +2,6 @@ spring.datasource.url=jdbc:postgresql://${PGHOST}:${PGPORT}/${PGDATABASE}
 spring.datasource.username=${PGUSER}
 spring.datasource.password=${PGPASSWORD}
 
-server.port=${SERVER_PORT}
+server.port=${PORT}
 
 filmlib.secret-key=${SECRET_KEY}
