--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,8 @@
     "@testing-library/user-event": "^14.4.3",
     "axios": "^1.2.1",
     "bootstrap": "^5.2.3",
+    "dotenv": "^16.0.3",
+    "env-cmd": "^10.1.0",
     "g": "^2.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
@@ -43,6 +45,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "proxy": "http://localhost:8081/api"
+  }
 }
