--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-#logging.level.org.springframework=DEBUG
+logging.level.org.springframework=DEBUG
 #spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.generate-ddl=true
