--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-# REACT_APP_API_LINK="https://filmlib-production.up.railway.app"
-REACT_APP_API_LINK="http://localhost:8081"
+REACT_APP_API_LINK="https://filmlib-production.up.railway.app"
+# REACT_APP_API_LINK="http://localhost:8081"
